# flutter_open_chinese_convert

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/: ci_spm.yaml
.github/workflows/: ci.yml  ci_spm.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  chineseconverter.cpp
android/src/main/cpp/OpenCC/src/: Common.hpp
android/src/main/kotlin/com/example/flutter_opencc/: FlutterOpenccPlugin.kt
android/src/main/kotlin/net/zonble/flutter_open_chinese_convert/: FlutterOpenccPlugin.kt
example/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
example/android/: build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner/Base.lproj/: Main.storyboard
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  flutter_open_chinese_convert.podspec  flutter_opencc.podspec
ios/Classes/: FlutterOpenccPlugin.h  FlutterOpenccPlugin.m  SwiftFlutterOpenccPlugin.swift
ios/flutter_open_chinese_convert/: Package.resolved  Package.swift
ios/flutter_open_chinese_convert/Sources/flutter_open_chinese_convert/: FlutterOpenChineseConvertPlugin.swift
ios/legacy/: FlutterOpenChineseConvertPlugin.swift
lib/: flutter_open_chinese_convert.dart  flutter_open_chinese_convert_method_channel.dart  flutter_open_chinese_convert_platform_interface.dart  flutter_opencc.dart
lib/src/: chinese_converter.dart  options.dart
lib/src/web/: flutter_opencc_web.dart  option_pair.dart
test/: flutter_open_chinese_convert_method_channel_test.dart  flutter_open_chinese_convert_test.dart  flutter_opencc_test.dart
(+5 files in other folders)
